--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -2,8 +2,9 @@ name: CI/CD Pipeline with DAST
 
 on:
   push:
-    branches:
-      - main
+  pull_request:
+    #branches:
+     # - main
 
 jobs:
   build-and-deploy:
